--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -16,6 +16,13 @@
     "appBtn": "Все литературные миры"
   },
   "Footer": {
-    "chat": "Telegram чат"
+    "chat": "Telegram чат",
+    "chorme": "О нас",
+    "center": "© 2024 • Мир слов Все права защищены",
+    "policy": "Политика конфиденциальности",
+    "offer": "Публичная оферта",
+    "kontakt": "Контакты"
+
+
   }
 }
